# itwinai-mnist-plugin

./: .gitignore  pyproject.toml
src/itwinai/plugins/mnist/: config.yaml  dataloader.py  model.py
